old slurm/slurm-4148.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
src/direct_cuda_pattern.cc:110:5: error: no matching function for call to object of type '(lambda at src/direct_cuda_pattern.cc:94:30)'
    on_iteration_over( target_function(ug_initial.data()),ug_initial.data() );
    ^~~~~~~~~~~~~~~~~
src/direct_cuda_pattern.cc:94:30: note: candidate function not viable: cannot convert argument of incomplete type 'void' to 'double'
    auto on_iteration_over = [ &file_name, &abs_file_name, unknowns, &abs_function ]( double residual, double* current_solution )
                             ^
1 error generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1
/var/spool/slurmd/job04148/slurm_script: line 16: ./direct_cuda_pattern: No such file or directory

real	0m0.012s
user	0m0.000s
sys	0m0.000s
